# Agent2Agent_1

./: README.md
a2a_friend_scheduling/: README.md
a2a_friend_scheduling/nate_agent_crewai/: pyproject.toml
